styles.scss
/* ... */
// @misc @ Media
@media (min-width: 769px) {
  .gallery-image-wrapper {
    flex-direction: column;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
  .gallery-image-topbar {
    border-bottom: 2px solid var(--clr-border);
  }
  .gallery-list:focus-within .gallery-image {
    // min-height: 86vh; // Respect zoom out level // How about let the user zoom the page or download the image? This declaration alone give so many headache!
    height: min(896px, 95vh);
    & > img {
      object-fit: contain; // For landscape to not overflow
    }
  }
  .gallery-close {
    float: right;
    cursor: pointer;
    padding: 0 1.5rem;
    outline: 2px solid var(--clr-border);
    color: var(--clr-text);
    transition: background-color .1s;
    &::before {
      content: "X";
      line-height: var(--image-topbar-height);
      display: block;
    }
    &:hover {
      background-color: var(--clr-warning);
    }
    &:active {
      background-color: var(--clr-codeblock-bg);
      transition: unset;
    }
  }
  .gallery-list--custom-1 {
    height: fit-content;
  }
}
@media (max-width: 768px) {
  .gallery-lists:focus-within:before {
    opacity: 1; // This make sure when user quickly pinch-zoom out, the content behind is black background. Very specific case, eh?
  }
  .gallery-lists:focus-within > .gallery-list::before {
    top: 0;
    bottom: var(--image-topbar-height);
    width: max(48px, 10vw);
    height: unset;
  }
  .gallery-list {
    --image-topbar-height: 64px;
    width: 144px;
  }
  .gallery-tab-buttons {
    --height: 3.25rem;
  }
  .gallery-list > p {
    position: fixed;
    text-align: center;
    bottom: var(--navigation-height-mobile);
    opacity: 0;
    left: 0;
    right: 0;
    transform: none;
    transition: none;
  }
  .gallery-lists--horizontal {
    flex-direction: row;
    flex-wrap: nowrap;
    overflow: hidden;
    overflow-x: scroll;
    & > .gallery-list {
      width: initial;
      height: 256px;
      overflow: visible;
      & img {
        width: auto;
      }
    }
  }
  .gallery-image-wrapper {
    flex-direction: column-reverse;
  }
  .gallery-image-topbar {
    position: relative!important;
    border-top: 2px solid var(--clr-border);
    &::before {
      padding-left: unset;
      padding-right: 16px;
      float: right;
      content: "Close < ";
    }
  }
  .gallery-close {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    &::before {
      all: unset;
    }
  }
  .gallery-image-link {
    float: unset;
    position: absolute;
    flex-direction: row-reverse;
    bottom: 0;
    left: 0;
    & > a {
      background-color: var(--clr-secondary-old);
    }
  }
  .gallery-list:hover > p {
    transition: none;
    animation: none;
    opacity: 0;
  }
  .gallery-list:focus-within {
    & > p {
      z-index: calc(var(--layer-zoomy) + 1);
      bottom: calc(var(--image-topbar-height) + 2px); // 2 is the outline/border
      animation: key-opacity 1s 2s reverse both;
    } 
    & > .gallery-image-wrapper {
      height: 100%;
      width: 100%;
    }
    & .gallery-image {
      flex: 1;
      height: 0;
    }
    & img {
      object-fit: contain;
      width: 100%;
      height: 100%;
    }
  }
  .gallery-list--custom-1 .gallery-image > img {
    object-position: 85%;
  }
}
@media (max-width: 450px) {
  .gallery-list.head .gallery-image {
    margin-top: auto;
  }
  .gallery-list.wide .gallery-image {
    width: auto;
    height: 100%;
  }
  .gallery-list.full .gallery-image {
    width: auto;
    height: 100%;
  }
}
@media (max-height: 800px) {
  .gallery-tab-content {
    --speed-open-delay: calc(var(--speed-close) + .5s);
    --speed-close: 1s;
  }
}

// ! @title ________ Blog ________

// ? @section # MD to HTML Defaults
// Pre is generated when using triple tilde
.highlighter-rouge:has(pre),
.codeblock-full {
  --title: "txt.md";
  outline: none;
  border: 2px solid var(--clr-codeblock-border);
  padding-top: 1rem;
  &::before {
    content: var(--title);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    line-height: 1rem;
    background-color: var(--clr-codeblock-bg-title);
    color: var(--clr-codeblock-text-title);
  }
  & pre {
    padding: 0 1rem;
    margin: 0;
    overflow: auto;
  }
  & code {
    font-family: 'Fira Code', monospace, system-ui;
    font-size: small;
  }
}
.codeblock-full {
  position: relative;
  outline: 1px solid var(--clr-codeblock-border);
  margin: 1rem 0;
  box-sizing: border-box;
  background-color: var(--clr-codeblock-bg);
  & pre {
    padding-bottom: 1rem;
  }
}

// ? @section # ToC
@keyframes blog-toc-hover {
  0% {transform: translateX(calc(-96px - (var(--offset)))); width: 96px;}
  33% {transform: translateX(calc(-178px - (var(--offset)))); width: 178px;}
  100% {transform: translateX(-160px); width: 256px;}
}
@keyframes blog-toc-hover-out {
  0% {transform: translateX(-160px); width: 256px;}
  40% {transform: translateX(calc(-180px - (var(--offset)))); width: 180px;}
  100% {transform: translateX(calc(-96px - (var(--offset)))); width: 96px;}
}
.blog-toc {
  --offset: 28px; // Compensate padding and border alike
  z-index: var(--layer-navigation-sticky);
  // transition: width .4s ease-in-out;
}
.blog-toc-content {
  position: relative;
  // outline: 2px solid var(--clr-codeblock-border);
  background-color: var(--clr-codeblock-bg);
  color: var(--clr-codeblock-border);
  & > h2 {
    user-select: none;
    padding-left: .25rem;
    font-size: 1rem;
    font-weight: normal;
    line-height: 1.5rem;
    overflow: hidden;
    text-wrap: nowrap;
    background-color: var(--clr-codeblock-bg-title);
    color: var(--clr-codeblock-text-title);
  }
}
/* ... */

